# nodestream-plugin-neptune

./: README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml  release.yaml
nodestream_plugin_neptune/: __init__.py  database_connector.py  extractor.py  graph_objects.py  ingest_query_builder.py  neptune_analytics_connector.py  neptune_analytics_query_executor.py  neptune_connection.py  neptune_connector.py  neptune_migrator.py  neptune_query_executor.py  query.py  query_executor.py  type_retriever.py
playground_project/: nodestream.yaml  test.yaml
playground_project/people/: alex.json  july.json
tests/unit/: matchers.py  test_ingest_query_builder.py  test_migrator.py  test_neptune_connection.py  test_neptune_connector.py  test_query_executor.py
