[tool.poetry]
name = "nodestream-plugin-neptune"
version = "0.12.0a2"
description = ""
authors = ["Zach Probst <Zach_Probst@intuit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nodestream = { version = "0.12.0a3", allow-prereleases = true} # TODO: Change this to 0.12 Final when it is ready
cymple = "^0.11.0"
aiobotocore = "^2.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pyhamcrest = "^2.1.0"
freezegun = "^1.4.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."nodestream.plugins"]
"databases" = "nodestream_plugin_neptune"
